# urban-foraging-app

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cli-tool/: Cargo.toml  README.md
cli-tool/src/: main.rs
endpoint/: .gitignore  build.gradle  settings.gradle
endpoint/src/main/java/dev/patrykferenc/urban/foraging/endpoint/: HttpTriggerFunction.java  UrbanForagingEndpointFunction.java
endpoint/src/main/java/dev/patrykferenc/urban/foraging/endpoint/prediction/: EdiblePlantResponseDTO.java  PredictionImage.java
endpoint/src/main/java/dev/patrykferenc/urban/foraging/endpoint/prediction/predictor/: CustomVisionEdiblePlantPredictor.java  CustomVisionEdieblePlantPredictor.java  CustomVisionProjectConfiguration.java  EdiblePlantPredictorFactory.java  EdieblePlantImagePredictor.java
src/: main.rs
