[package]
name = "cli_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = "0.24.5"
reqwest = { version = "0.11", features = ["blocking"] }
infer = "0.3"